# LY-SLAM

./: .gitignore  README.md
src/Controller/: CMakeLists.txt  package.xml  四轮舵轮轮组机器人LQR与MPC控制器设计.md
src/Controller/config/: params.yaml
src/Controller/include/mpc_osqp_ros2/: Constraints.hpp  MPCNode.hpp  MPCSolver.hpp  SystemModel.hpp  Types.hpp
src/Controller/launch/: mpc_controller.launch.py
src/Controller/src/: Constraints.cpp  MPCNode.cpp  MPCSolver.cpp  SystemModel.cpp
src/Controller/test/: test_constraints.cpp  test_mpc_node.cpp  test_mpc_solver.cpp  test_system_model.cpp
src/ObsDetecter/: CMakeLists.txt  package.xml
src/ObsDetecter/include/utils/: common_lib.hpp  raycaster.h  scope_timer.hpp  visual_utils.hpp
src/ObsDetecter/src/rog_map/: prob_map.cpp  rog_map.cpp
